# DeckRC

./: .gitignore  LICENSE  README.md  build.sh  org.deckrc.remotectrl.yaml  run.sh
app/: CMakeLists.txt  main.cpp
app/inc/: App.h  InputMgr.h  Logger.h
app/src/: App.cpp  CMakeLists.txt  InputMgr.cpp  Logger.cpp  main.cpp
